<resources>
    <string name="app_name">Matrix Controller</string>
    <string name="app_version_name">1.0.4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Matrix Controller</string>
    <string name="nav_header_subtitle">Version 1.0.4</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_adddevice">Add Device</string>


    <string name="menu_home">About APP</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">New Version</string>

    <string name="ddf_add_device">Add new deivce</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>

    <string name="title_activity_matrix">Matrix Controller - </string>
    <string name="title_switch">Switch</string>
    <string name="title_status">Status</string>
    <string name="title_scheme">Scheme</string>
    <string name="edit_device">Edit</string>
    <string name="delete_device">Delete</string>

    <string name="edit_tips">Edit the device later.</string>
    <string name="dlg_title_edit_device">Edit Device</string>
    <string name="dlg_title_create_device">Create Device</string>
    <string name="device_name_title">Name:</string>
    <string name="device_incount_title">IN:</string>
    <string name="device_outcount_title">OUT:</string>
    <string name="device_ip_title">IP:</string>
    <string name="device_port_title">PORT:</string>
    <string name="del_confirm_title">Delete Confirm</string>
    <string name="msg_delete_device_confirm">Are you sure to delete the item?</string>
    <string name="msg_delete_scheme_confirm">Are you sure to delete the item?</string>
    <string name="msg_input_scheme_name">Please input the scheme name</string>
    <string name="msg_resave_scheme">Please re-save the status as a new scheme</string>
    <string name="msg_input_channel_title">Please input the channel title.</string>
    <string name="menu_title_create">Create</string>
    <string name="menu_title_refresh">Refresh</string>
    <string name="menu_title_mode">Mode</string>
    <string name="msg_communication_err">Communication timeout......</string>
    <string name="msg_communication_ok">Communication failed</string>
    <string name="device_ip_title_info">IP:</string>
    <string name="device_ip_port_info">Port:</string>
    <string name="msg_title_offline">[Offline]</string>
    <string name="msg_title_online">[Online]</string>
    <string name="apply_confirm_title">Apply Scheme</string>
    <string name="msg_apply_scheme_confirm">Do you want apply the selected scheme?</string>
    <string name="title_activity_scheme">SchemeActivity</string>
    <string name="menu_load_scheme">Load Scheme</string>
    <string name="menu_save_scheme">Save Scheme</string>
    <string name="copyright">Copyright © 2019 - 2020 IWEON, All Rights Reserved.</string>
    <string name="copyright_iweon">Copyright © 2019 - 2020 IWEON, All Rights Reserved.</string>
    <string name="email_title">Product Consultation and User Advice</string>
    <string name="email_content">Please enter your suggestions and inquiries.</string>
    <string name="msg_offline_device">The matrix is offline.</string>
    <string name="in_index_string">IN:[%d]</string>
    <string name="in_index_invalid_string">IN:[?]</string>
    <string name="out_index_string">OUT:[%d]</string>
    <string name="in_index_scheme_string">SCHEME IN:[%d]</string>
    <string name="in_title">In#</string>
    <string name="out_title">Out#</string>
    <string name="progress_msg_query_id">Querying id......</string>
    <string name="progress_msg_query_status">Querying status......</string>
    <string name="progress_msg_switch_channel">Switching channels......</string>
    <string name="progress_msg_switch_all_channel">Switching all channels......</string>
    <string name="progress_msg_load_scheme">Loading scheme......</string>
    <string name="device_timeout">Timeout:</string>
    <string name="menu_title_switch">Switch</string>
</resources>
